--- a/dgumi0/create/src/pages/user/about.css
+++ b/dgumi0/create/src/pages/user/about.css
@@ -1,4 +1,11 @@
-
 .normal {
-  background: #F2D079;
+  background: #f2d079;
+}
+.head {
+  padding: 10px;
+  border: 2px solid #eee;
+}
+.table {
+  margin-top: 30px;
+  border: 1px solid rgb(165, 231, 195);
 }
