--- a/dgumi0/create/src/pages/login/index.css
+++ b/dgumi0/create/src/pages/login/index.css
@@ -1,5 +1,6 @@
 .loginForm {
-  width: 50%;
-  margin: 100px auto;
+  width: 30%;
+  height: 200px;
+  margin: 100px auto 0;
   text-align: center;
 }
